# pingsays

./: LICENSE  README.md
Sublime/: Preferences.sublime-settings
apps/farefiling/: app.py  gg_fare_filing.xlsx  pyproject.toml  test.py
apps/farefiling/modules/: utilities.py
apps/farefiling/src/: datatype_mapping.py
apps/farefiling/src/modules/: utilities.py
gg/: index.html
gg/static/: styles.css
msf/einherjar/: war.js
python/: vaccine.py
python/FareFiling/: GG_Fare_Filing.ipynb  InputFile.xlsx  Pipfile  fare_input_backup.xlsx  gg.py  gg_fare_filing.xlsx
python/FareFiling-old/: gg.py  gg_fare_filing.xlsx
python/fare-filing/: GG_Fare_Filing.ipynb  Pipfile  fare_input_backup.xlsx  gg.py  gg_fare_filing.xlsx  pyproject.toml  requirements.txt  test_gg.py
python/fare-filing/models/: models.py
python/fare-filing/modules/: fare_filing.py
