[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ping Lin", email = "pingli88@gmail.com"},
]
dependencies = [
    "pandas>=1.4.3",
    "openpyxl>=3.0.10",
    "pydantic>=1.9.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
